Updated JavaScript game, README.md, and added Top Ten to bottom of page.

--- a/index.html
+++ b/index.html
@@ -13,16 +13,17 @@
 
     <!--Header Introduction-->
     <header>
-        <h1>My Name is Jared Barnes</h1>
+        <h1>Jared Barnes</h1>
     </header>
     <hr>
     <!--My Bio-->
     <main>
         <h2 class="header">Biography</h2>
         <p class="bio">I was born in Ohio but grew up in Tennessee. I currently live in Peru. I have a dog named<br> Frances. She was rescued while living in West, Tennessee over 7 years ago. She was almost a year old when we adopted <br>her. I am in Peru becuase of
-            my wife is active duty Navy. I have extensive sales and customer service experience.<br> However, I am currently a student at Code Fellows and learning how to code.</p>
+            my wife is active duty Navy. I have extensive sales and customer service experience.<br> However, I am currently a student at Code Fellows learning to code.</p>
         <h2 class="header">Job History</h2>
         <ul class="jobs">
+            <li>Student at Code Fellows, Learning Full Stack JavaScript</li>
             <li>Mythics Inc., Virginia Beach, Virginia, Support Solutions Supervisor</li>
             <li>Sunshine Media Group, Chattanooga, TN, Market Development Manager</li>
             <li>True North Custom Publishing, Chattanooga, TN, Publisher</li>
@@ -39,6 +40,20 @@
             <li>Travel</li>
             <li>Be kind</li>
         </ul>
+
+        <h2>Top Ten Places To Visit</h2>
+        <ol>
+            <li>Peru</li>
+            <li>Pacaya Samiria National Reserve, Peru</li>
+            <li>Machu Picchu</li>
+            <li>The Great Smoky Mountains</li>
+            <li>Geneva, Switzerland</li>
+            <li>Yellowstone National Park</li>
+            <li>Grand Tetons</li>
+            <li>Portland, Oregon</li>
+            <li>Ashville, North Carolina</li>
+            <li>The Clinch River, Tennessee</li>
+        </ol>
 
     </main>
     <script src="app.js"></script>
