Updated Styling and title.

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="text/html">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="styles.css">
-    <title>Guess Something About Jared Barnes</title>
+    <title>Guess Facts for Jared Barnes</title>
 </head>
 
 <body>
@@ -19,8 +19,10 @@
     <!--My Bio-->
     <main>
         <h2 class="header">Biography</h2>
-        <p class="bio">I was born in Ohio but grew up in Tennessee. I currently live in Peru. I have a dog named<br> Frances. She was rescued while living in West, Tennessee over 7 years ago. She was almost a year old when we adopted <br>her. I am in Peru becuase of
-            my wife is active duty Navy. I have extensive sales and customer service experience.<br> However, I am currently a student at Code Fellows learning to code.</p>
+        <p class="bio">I was born in Ohio but grew up near Knoxville, Tennessee. I graduated the University of Tennessee in 2003. I have been in<br> sales most of my career and I am 43 years old. I currently live in Peru. I have a dog named Frances. She was<br> rescued
+            while living in West, Tennessee over 7 years ago. She was almost a year old when we adopted her. I am in Peru<br> becuase of my wife is active duty Navy. I have extensive sales and customer service<br> experience. However, I am currently a
+            student at Code Fellows.
+        </p>
         <h2 class="header">Job History</h2>
         <ul class="jobs">
             <li>Student at Code Fellows, Learning Full Stack JavaScript</li>
@@ -41,8 +43,8 @@
             <li>Be kind</li>
         </ul>
 
-        <h2>Top Ten Places To Visit</h2>
-        <ol>
+        <h2 class="header">Top Ten Places To Visit</h2>
+        <ol class="places">
             <li>Peru</li>
             <li>Pacaya Samiria National Reserve, Peru</li>
             <li>Machu Picchu</li>
