--- a/index.html
+++ b/index.html
@@ -6,58 +6,71 @@
     <meta http-equiv="X-UA-Compatible" content="text/html">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="styles.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
     <title>Guess Facts for Jared Barnes</title>
 </head>
 
 <body>
 
     <!--Header Introduction-->
+
     <header>
         <h1>Jared Barnes</h1>
     </header>
-    <hr>
+
     <!--My Bio-->
     <main>
-        <h2 class="header">Biography</h2>
-        <p class="bio">I was born in Ohio but grew up near Knoxville, Tennessee. I graduated the University of Tennessee in 2003. I have been in<br> sales most of my career and I am 43 years old. I currently live in Peru. I have a dog named Frances. She was<br> rescued
-            while living in West, Tennessee over 7 years ago. She was almost a year old when we adopted her. I am in Peru<br> becuase of my wife is active duty Navy. I have extensive sales and customer service<br> experience. However, I am currently a
-            student at Code Fellows.
-        </p>
-        <h2 class="header">Job History</h2>
-        <ul class="jobs">
-            <li>Student at Code Fellows, Learning Full Stack JavaScript</li>
-            <li>Mythics Inc., Virginia Beach, Virginia, Support Solutions Supervisor</li>
-            <li>Sunshine Media Group, Chattanooga, TN, Market Development Manager</li>
-            <li>True North Custom Publishing, Chattanooga, TN, Publisher</li>
-            <li>American Bicycle Group, Chattanooga, TN, Inside Sales/Customer Service</li>
-        </ul>
+        <div class="first">
+            <h2 class="subhead">Biography</h2>
+            <p>I was born in Ohio but grew up near Knoxville, Tennessee. I graduated the University of Tennessee in 2003. I previously worked as a software renewal sales supervisor and I'm 43 years old. I currently live in Peru with my wife and a dog named
+                Frances. She was rescued while living in Memphis, Tennessee over 7 years ago. I'm in Peru because of my wife is active duty Navy. I have extensive sales and customer service experience. However, I am currently a student at Code Fellows
+                learning how to code.
+            </p>
+        </div>
+        <div class="first">
+            <h2 class="subhead">Job History</h2>
+            <ul class="jobs">
+                <li>Student at Code Fellows, Learning Full Stack JavaScript</li>
+                <li>Mythics Inc., Virginia Beach, Virginia, Support Solutions Supervisor</li>
+                <li>Sunshine Media Group, Chattanooga, TN, Market Development Manager</li>
+                <li>True North Custom Publishing, Chattanooga, TN, Publisher</li>
+                <li>American Bicycle Group, Chattanooga, TN, Inside Sales/Customer Service</li>
+            </ul>
+        </div>
         <!-- Start of Education -->
-        <h2 class="header">Education</h2>
-        <p class="education">University of Tennessee, Knoxville</p>
+        <div class="first">
+            <h2 class="subhead">Education</h2>
+            <p class="education">University of Tennessee, Knoxville</p>
+        </div>
         <!-- Goals -->
-        <h2 class="header">Goals</h2>
-        <ul class="goals">
-            <li>Learn web development</li>
-            <li>Find a job as a web developer</li>
-            <li>Travel</li>
-            <li>Be kind</li>
-        </ul>
-
-        <h2 class="header">Top Ten Places To Visit</h2>
-        <ol class="places">
-            <li>Peru</li>
-            <li>Pacaya Samiria National Reserve, Peru</li>
-            <li>Machu Picchu</li>
-            <li>The Great Smoky Mountains</li>
-            <li>Geneva, Switzerland</li>
-            <li>Yellowstone National Park</li>
-            <li>Grand Tetons</li>
-            <li>Portland, Oregon</li>
-            <li>Ashville, North Carolina</li>
-            <li>The Clinch River, Tennessee</li>
-        </ol>
-
+        <div class="first">
+            <h2 class="subhead">Goals</h2>
+            <ul class="goals">
+                <li>Learn web development</li>
+                <li>Find a job as a web developer</li>
+                <li>Travel</li>
+                <li>Be kind</li>
+            </ul>
+        </div>
+        <div class="first">
+            <h2 class="subhead">Top Ten Places To Visit</h2>
+            <ol class="places">
+                <li>Peru</li>
+                <li>Pacaya Samiria National Reserve, Peru</li>
+                <li>Machu Picchu</li>
+                <li>The Great Smoky Mountains</li>
+                <li>Geneva, Switzerland</li>
+                <li>Yellowstone National Park</li>
+                <li>Grand Tetons</li>
+                <li>Portland, Oregon</li>
+                <li>Ashville, North Carolina</li>
+                <li>The Clinch River, Tennessee</li>
+            </ol>
+        </div>
     </main>
+
     <script src="app.js"></script>
 </body>
 
