submitting to github pages

--- a/index.html
+++ b/index.html
@@ -5,11 +5,11 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="text/html">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="/CSS/stylesheet.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
-    <title>Guess Facts for Jared Barnes</title>
+    <title>Bio Jared Barnes</title>
 </head>
 
 <body>
@@ -25,8 +25,7 @@
         <div class="first">
             <h2 class="subhead">Biography</h2>
             <p>I was born in Ohio but grew up near Knoxville, Tennessee. I graduated the University of Tennessee in 2003. I previously worked as a software renewal sales supervisor and I'm 43 years old. I currently live in Peru with my wife and a dog named
-                Frances. She was rescued while living in Memphis, Tennessee over 7 years ago. I'm in Peru because of my wife is active duty Navy. I have extensive sales and customer service experience. However, I am currently a student at Code Fellows
-                learning how to code.
+                Frances. She was rescued while living in Memphis, Tennessee over 7 years ago. I'm in Peru due to my wife job. I have extensive sales and customer service experience. However, I am currently a student at Code Fellows learning to code.
             </p>
         </div>
         <div class="first">
@@ -71,7 +70,7 @@
         </div>
     </main>
 
-    <script src="app.js"></script>
+    <script src="/JS/app.js"></script>
 </body>
 
 </html>
