--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
+    <script src="https://kit.fontawesome.com/724dee5e13.js" crossorigin="anonymous"></script>
     <title>Bio Jared Barnes</title>
 </head>
 
@@ -18,16 +19,21 @@
 
     <header>
         <h1>Jared Barnes</h1>
+        <a href="https://github.com/GearRatio"> <i class="fab fa-github fa-2x" style="color: black"></i></a>
+        <a href="https://www.linkedin.com/in/jared-d-barnes/"><i class="fab fa-linkedin fa-2x" style="color: black"></i>     </a>
+
     </header>
 
     <!--My Bio-->
     <main>
         <div class="first">
             <h2 class="subhead">Biography</h2>
-            <p>I was born in Ohio but grew up near Knoxville, Tennessee. I graduated the University of Tennessee in 2003. I previously worked as a software renewal sales supervisor and I'm 43 years old. I currently live in Peru with my wife and a dog named
-                Frances. She was rescued while living in Memphis, Tennessee over 7 years ago. I'm in Peru due to my wife job. I have extensive sales and customer service experience. However, I am currently a student at Code Fellows learning to code.
+            <p>I was born in Ohio but grew up in Oak Ridge, Tennessee. I graduated the University of Tennessee in 2003 with a BS in Communications. I previously worked as a software renewal sales supervisor. I currently live in Peru with my wife and a dog
+                named Frances. We have been here for two years. When I am not learning to code I enjoy traveling, fly-fishing, and trying new food. However, I am currently a student at Fellows learning to code. My goal is to transition into web develop
+                upon completion.
             </p>
         </div>
+        <!-- Job History -->
         <div class="first">
             <h2 class="subhead">Job History</h2>
             <ul class="jobs">
@@ -53,6 +59,7 @@
                 <li>Be kind</li>
             </ul>
         </div>
+        <!-- My Top Ten Places To Visit -->
         <div class="first">
             <h2 class="subhead">Top Ten Places To Visit</h2>
             <ol class="places">
@@ -69,7 +76,6 @@
             </ol>
         </div>
     </main>
-
     <script src="./JS/app.js"></script>
 </body>
 
